--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <i class="fas fa-volume-up"></i> Hit Play (Sound On)
           </div>            
           <video id="mainVideo" controls poster="https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698460/One_Smart_Pack_Background_DROPWEB.IO_1_rs6q3w.jpg">
-            <source src="images/dropweb shopify themes Pack v2.0.mp4" type="video/mp4" />
+            <source src="https://www.youtube.com/watch?v=xwvBim9AANg" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
           <div class="overlay-play" id="playOverlay"><i class="fa-solid fa-play"></i></div>
@@ -937,3 +937,4 @@
   
 </body>
 </html> 
+
