--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dropweb.io | The Ultimate Marketplace for Shopify Themes</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="images/_Dropweb logo.png" sizes="64x64" type="image/png">
+    <link rel="icon" href="https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698696/_Dropweb_logo_teo5g0.png" sizes="64x64" type="image/png">
 
 </head>
 <body>
@@ -955,3 +955,4 @@
   
 </body>
 </html> 
+
